--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<!--<li><a href="#" class="fa-twitter">Twitter</a></li>-->
+								<!--<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="#" class="fa-facebook">Facebook</a></li>-->
+                                <li><a href="https://www.linkedin.com/in/gabriel-casetta/" class="fa-linkedin">Linkedin</a></li>
 							</ul>
 						</footer>
 					</section>
