--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Gabriel C.</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="componentes/index.css">
-    <script src="https://kit.fontawesome.com/f25d75395e.js"></script>
 </head>
 <body>
     <section class="container">
@@ -16,7 +15,7 @@
             <p class="content__text--hw">Hello World!</p>
             <h1 class="content__text--gc">I'm <span class="blue">Gabriel Casetta</span></h1>
             <h2 class="content__text--role">As a <span class="blue">Frontend Developer</span></h2>
-            <a href="https://www.linkedin.com/in/gabriel-casetta/" target="_blank"><i class="fab fa-linkedin content__icon"></i></a>
+            <a href="https://www.linkedin.com/in/gabriel-casetta/" target="_blank"><img src="linkedin.png" href="https://www.linkedin.com/in/gabriel-casetta/" target="_blank" alt=""></a>
         </div>
 
     </section>
